# plugin-GUI

./: .gitignore  CMakeLists.txt
Plugins/: CMakeLists.txt
Plugins/BasicSpikeDisplay/SpikeDisplayNode/: SpikeDisplayCanvas.cpp  SpikeDisplayCanvas.h  SpikeDisplayEditor.cpp  SpikeDisplayEditor.h  SpikeDisplayNode.cpp  SpikeDisplayNode.h
Plugins/CAR/: CAR.cpp  CAR.h  CAREditor.cpp  CAREditor.h
Plugins/ChannelMappingNode/: ChannelMappingEditor.cpp  ChannelMappingEditor.h  ChannelMappingNode.cpp  ChannelMappingNode.h
Plugins/FilterNode/: FilterEditor.cpp  FilterEditor.h  FilterNode.cpp  FilterNode.h
Plugins/HeartbeatNode/: CMakeLists.txt  HeartbeatNode.cpp  HeartbeatNode.h  HeartbeatNodeEditor.cpp  HeartbeatNodeEditor.h  OpenEphysLib.cpp
Plugins/RiverOutput/: CMakeLists.txt  CMakeLists.txt.in.river  OpenEphysLib.cpp  RiverOutput.cpp  RiverOutput.h  RiverOutputEditor.cpp  RiverOutputEditor.h  SchemaListBox.h
Plugins/SpikeSorter/: CMakeLists.txt  CMakeLists.txt.in.tcrosser  SpikeSortBoxes.cpp  SpikeSortBoxes.h  SpikeSorter.cpp  SpikeSorter.h  SpikeSorterCanvas.cpp  SpikeSorterCanvas.h  SpikeSorterEditor.cpp
Source/: CoreServices.cpp  CoreServices.h  MainWindow.cpp  MainWindow.h
Source/Processors/Parameter/: Parameter.cpp  Parameter.h
Source/Processors/ProcessorGraph/: CMakeLists.txt  CMakeLists.txt.in.httplib  CMakeLists.txt.in.json  ProcessorGraph.cpp  ProcessorGraph.h  ProcessorGraphHttpServer.h
Source/UI/: ControlPanel.cpp  ControlPanel.h  SignalChainManager.cpp  UIComponent.cpp  UIComponent.h
